--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,8 @@
         android:theme="@style/Theme.TheECOGame"
         tools:targetApi="31">
         <activity
-            android:name=".viewmodel.activity_questions"
+            android:name=".ui.MainScreen"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".viewmodel.LoginActivity"
-            android:exported="true"
-            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
