--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.TheECOGame"
         tools:targetApi="31">
         <activity
+            android:name=".activity_estadistica"
+            android:exported="false" />
+        <activity
             android:name=".ui.MainScreen"
             android:exported="true">
             <intent-filter>
