[UT 382] Desarrollo interfaz ajustes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     // Unit test
 
     implementation("androidx.fragment:fragment-ktx:1.5.5")
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
