--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:theme="@style/Theme.TheECOGame"
         tools:targetApi="31">
         <activity
+            android:name=".views.SettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.TheECOGame.NoActionBar" />
+        <activity
             android:name=".activity_estadistica"
             android:exported="false" />
         <activity
