Pruebas uso fragmentos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.TheECOGame"
         tools:targetApi="31">
         <activity
-            android:name=".views.SettingActivity"
+            android:name=".presentation.views.GameActivityView"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -22,10 +22,10 @@
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.TheECOGame.NoActionBar" />
         <activity
-            android:name=".activity_estadistica"
+            android:name=".presentation.views.activity_estadistica"
             android:exported="false" />
         <activity
-            android:name=".views.MainScreen"
+            android:name=".presentation.views.MainScreenActivityView"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
