--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
 
     // Unit test
     testImplementation 'junit:junit:4.13.2'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 
     // Android Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
