--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:exported="false" />
         <activity
             android:name=".presentation.setting.view.SettingActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".presentation.game.view.GameActivity"
             android:exported="false" />
