--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.TheECOGame"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.mainScreen.view.MainScreenActivity"
+            android:name=".presentation.register.view.RegisterFragment"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
