--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
 
     // Binding
     implementation 'androidx.databinding:library:3.2.0-alpha11'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
     // Unit test
     testImplementation 'junit:junit:4.13.2'
