--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.userManagement.UserManagementActivity"
+            android:name=".presentation.userManagement.view.UserManagementActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.mainScreen.view.MainScreenActivity"
