--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,10 @@
         android:theme="@style/Theme.TheECOGame"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <!--
-        <activity
-            android:name=".presentation.register.view.pruebaActivity"
-            android:exported="false" />
-        -->
 
+        <activity
+            android:name=".presentation.register.view.RegisterActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
