Actualizacion del builder para soportar preguntas y ahorcados

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
 dependencies {
     // Kotlin
     implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.fragment:fragment-ktx:1.5.6'
+    implementation 'androidx.fragment:fragment-ktx:1.5.7'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Material Components
@@ -66,6 +66,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 
     // Preferences DataStore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
     implementation("androidx.datastore:datastore-preferences:1.0.0")
 
     // Navigation
