--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".EditProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.userManagement.view.UserManagementActivity"
             android:exported="true">
             <intent-filter>
@@ -25,18 +28,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".presentation.mainScreen.view.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.register.view.RegisterActivity"
             android:exported="false" />
-
         <activity
             android:name=".presentation.mainScreen.view.MainScreenActivity"
             android:exported="false" />
-
         <activity
             android:name=".presentation.game.view.GameActivity"
             android:exported="false" />
