--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!--
         <activity
             android:name=".presentation.userManagement.view.UserManagementActivity"
             android:exported="true">
@@ -27,33 +26,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        -->
 
         <activity
             android:name=".presentation.register.view.RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".presentation.mainScreen.view.LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".presentation.mainScreen.view.MainScreenActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.game.view.GameActivity"
             android:exported="false" />
-        <!--
         <activity
             android:name=".presentation.editProfile.view.EditProfileActivity"
             android:exported="false" />
-        -->
         <activity
             android:name=".presentation.statistics.view.ActivityStatistics"
             android:exported="false" />
