--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,8 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.userManagement.view.UserManagementActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -35,7 +31,11 @@
 
         <activity
             android:name=".presentation.mainScreen.view.MainScreenActivity"
-            android:exported="false" />
+            android:exported="true"> <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
 
         <activity
             android:name=".presentation.game.view.GameActivity"
