--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,12 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.userManagement.view.UserManagementActivity"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
@@ -31,11 +35,7 @@
 
         <activity
             android:name=".presentation.mainScreen.view.MainScreenActivity"
-            android:exported="true"> <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-
-        <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+            android:exported="false"/>
 
         <activity
             android:name=".presentation.game.view.GameActivity"
