--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     implementation 'androidx.databinding:library:3.2.0-alpha11'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
+    // Picasso (for png from URLs)
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // Unit test
     testImplementation 'junit:junit:4.13.2'
     // Optional -- Mockito framework
